# discord-timestamp

./: Cargo.toml  LICENSE  README.md
src/: main.rs
