[package]
name = "discord-timestamp"
description = "A CLI utility to generate discord-formatted timestamps"
version = "0.1.0"
authors = ["Rose Peck"]
repository = "https://github.com/sixfold-origami/discord-timestamp"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
keywords = ["discord", "CLI", "timestamp", "datetime"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive", "env"] }
cli-clipboard = "0.4.0"
prettytable-rs = "0.10.0"
